--- a/stubs/index.html
+++ b/stubs/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit.min.js"></script>
     <title>Just Chat</title>
 </head>
 <body>
   <script src="/extLib/vue.min.js"></script>
-  <script src="/extLib/vue-material.min.js"></script>
   <div id="app">Hold on...</div>
   <script src="/main.js"></script>
 </body>
